--- a/themes/rhino3d.com-theme/i18n/fr.toml
+++ b/themes/rhino3d.com-theme/i18n/fr.toml
@@ -289,3 +289,11 @@ other = "Nouveau"
 # Featured button and tag on Learn Pages
 [featured]
 other = "Marqué"
+
+# All button and tag on Learn Pages
+[all]
+other = "Toutes"
+
+# Filter textfield on Learn Pages
+[filter]
+other = "Filtrer..."
