--- a/themes/rhino3d.com-theme/i18n/de.toml
+++ b/themes/rhino3d.com-theme/i18n/de.toml
@@ -289,3 +289,7 @@ other = "Auswahl"
 # All button and tag on Learn Pages
 [all]
 other = "Alle"
+
+# Filter textfield on Learn Pages
+[filter]
+other = "Filter..."
