--- a/themes/rhino3d.com-theme/i18n/en.toml
+++ b/themes/rhino3d.com-theme/i18n/en.toml
@@ -78,6 +78,9 @@ other = "New in [VERSION]"
 [New-in-Rhino-7]
 other = "New in Rhino 7"
 
+[New-in-Rhino-8]
+other = "New in Rhino 8"
+
 [All-the-details]
 other = "All the details..."
 
@@ -233,6 +236,18 @@ other = "Free-form, precisely."
 # Details of the Rhino 7 video caption
 [caption-rhino-7-details]
 other = "Available now with SubD, Rhino.Inside.Revit, QuadRemesh, and more."
+
+# Title on homepage
+[caption-rhino-8]
+other = "Rhino 8"
+
+# Subtitle on homepage caption
+[caption-rhino-8-subtitle]
+other = "Charging Forward"
+
+# Details of the Rhino 8 caption
+[caption-rhino-8-details]
+other = "Available now with ShrinkWrap, Sharp SubD, Mac Speed Boost, and more."
 
 # Link title on homepage video captions
 [caption-learn-more]
