--- a/themes/rhino3d.com-theme/i18n/jp.toml
+++ b/themes/rhino3d.com-theme/i18n/jp.toml
@@ -56,13 +56,13 @@ other = "クリース分割"
 other = "ヒストリ"
 
 [enabled]
-other = "enabled"
+other = "有効"
 
 [More-details]
 other = "詳細..."
 
 [Including]
-other = "Including:"
+other = "次を含む:"
 
 [Rhino-Commands]
 other = "Rhinoのコマンド"
@@ -77,6 +77,9 @@ other = "[VERSION] の新機能"
 
 [New-in-Rhino-7]
 other = "Rhino 7 の新機能"
+
+[New-in-Rhino-8]
+other = "Rhino 8 の新機能"
 
 [All-the-details]
 other = "すべての詳細..."
@@ -188,7 +191,7 @@ other = "開く/インポート"
 other = "保存/エクスポート"
 
 [Notes]
-other = "Notes"
+other = "メモ"
 
 [Latest-Updates]
 other = "最新の更新"
@@ -197,7 +200,7 @@ other = "最新の更新"
 other = "機能向上"
 
 [Improvements]
-other = "Improvements"
+other = "改善"
 
 [Mac-only]
 other = "Macのみ"
@@ -233,6 +236,18 @@ other = "フリーフォーム、高精度"
 # Details of the Rhino 7 video caption
 [caption-rhino-7-details]
 other = "SubD、Rhino.Inside.Revit、QuadRemesh、その他の機能を搭載"
+
+# Title on homepage
+[caption-rhino-8]
+other = "Rhino 8"
+
+# Subtitle on homepage caption
+[caption-rhino-8-subtitle]
+other = "充電、進行中"
+
+# Details of the Rhino 8 caption
+[caption-rhino-8-details]
+other = "ShrinkWrap、シャープなSubD、その他の新機能を搭載しました。またMacでの速度が向上しました。"
 
 # Link title on homepage video captions
 [caption-learn-more]
