--- a/themes/rhino3d.com-theme/i18n/it.toml
+++ b/themes/rhino3d.com-theme/i18n/it.toml
@@ -243,11 +243,11 @@ other = "Rhino 8"
 
 # Subtitle on homepage caption
 [caption-rhino-8-subtitle]
-other = "Novità"
+other = "Un gran passo avanti"
 
 # Details of the Rhino 8 caption
 [caption-rhino-8-details]
-other = "Disponibile ora con AvvolgiMesh, SpigoliVivi SubD, Mac Speed Boost e altro ancora."
+other = "Disponibile ora con AvvolgiMesh, Pieghe SubD, Mac Speed Boost e altro ancora."
 
 # Link title on homepage video captions
 [caption-learn-more]
@@ -259,7 +259,7 @@ other = "Prova"
 
 # The conjoiner before the Buy link in the video caption
 [caption-or-conjoiner]
-other = "o "
+other = " o "
 
 # Link title on homepage video captions
 [caption-buy]
@@ -303,7 +303,7 @@ other = "In evidenza"
 
 # All button and tag on Learn Pages
 [all]
-other = "Vengono"
+other = "Tutto"
 
 # Filter textfield on Learn Pages
 [filter]
