--- a/themes/rhino3d.com-theme/i18n/tw.toml
+++ b/themes/rhino3d.com-theme/i18n/tw.toml
@@ -34,6 +34,9 @@ other = "管理您的帳戶、授權及組別"
 [sign-in]
 other = "登入"
 
+[sign-out]
+other = "登出"
+
 [sign-in-title]
 other = "登入以管理您的帳戶、授權及組別"
 
@@ -243,11 +246,11 @@ other = "Rhino 8"
 
 # Subtitle on homepage caption
 [caption-rhino-8-subtitle]
-other = "勇往直前"
+other = "蓄勢待發"
 
 # Details of the Rhino 8 caption
 [caption-rhino-8-details]
-other = "新功能 ShrinkWrap、SubD 銳角、Mac 速度提升及更多其它功能。"
+other = "ShrinkWrap、SubD 銳邊、Mac 速度提升及更多其它功能。"
 
 # Link title on homepage video captions
 [caption-learn-more]
